# rz-ghidra

./: meson.build  meson_options.txt
cutter-plugin/: meson.build
subprojects/: ghidra.wrap  rizin.wrap
subprojects/packagefiles/ghidra/: meson.build  meson_options.txt
